@startuml

title __WEEK8-WEEK8_14.STUDENTSSORTEDBYNAME's Class Diagram__\n

  package  {
    class Main {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    class Student {
    }
  }
  

  package  {
    class Student {
    }
  }
  

  Student -up-|> Comparable
  Student -up-|> Comparable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
